--- a/microservices/ms-workout/package.json
+++ b/microservices/ms-workout/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.0",
+    "nodemon": "^2.0.12",
     "save": "^2.4.0",
     "sequelize": "^6.6.5"
   }
